Controllata l'eda. Sistemato tutto, tutto bene

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -41,8 +41,8 @@
    "id": "c9727671",
    "metadata": {},
    "source": [
-    "### Import degli spettri del sampling\n",
-    "Importo solo il primo dei due campioni che ci sono stati forniti"
+    "### Import degli spettri di sampling\n",
+    "Importo solo il primo dei due campioni che ci sono stati forniti, per lavorare con il secondo o altri o modificare quì sotto o utilizzare l'analisi automatizata con **make**."
    ]
   },
   {
@@ -107,7 +107,7 @@
    "source": [
     "Di seguito plottiamo come esempio lo **spettro puro dell'Albite**. \n",
     "\n",
-    "Notiamo come lo spettro è poco rumoroso e non presenti offset significativi inoltre lontano dalle frequenze di assorbimento degli stati rotazionali/vibrazionali delle molecole lo spettro va a zero. "
+    "Notiamo come lo spettro è poco rumoroso e non presenti offset significativi inoltre lontano dai picchi (dalle frequenze di assorbimento degli stati rotazionali/vibrazionali delle molecole) lo spettro va a zero. "
    ]
   },
   {
@@ -141,11 +141,7 @@
    "id": "fb065611",
    "metadata": {},
    "source": [
-    "Vogliamo ora comparare diversi spettri puri per imparare il più possibile l'andamento delle curve Raman.\n",
-    "\n",
-    "Notiamo che gli spettri raman dei materiali puri non sono normalizzati tra di loro. \n",
-    "\n",
-    "Dato che l'area sotto lo spettro risulta proporzionale al tempo di esposizione della misura (fonte: pdf di introduzione), questa non è una quantità a cui siamo interessati, scegliamo di normalizzare in modo che tutti gli spettri abbiamo area unitaria."
+    "Vogliamo ora comparare diversi spettri puri per imparare il più possibile l'andamento delle curve Raman. Notiamo che gli spettri raman dei materiali puri non sono normalizzati tra di loro. Dato che l'area sotto lo spettro risulta proporzionale al tempo di esposizione della misura (fonte: pdf di introduzione), questa non è una quantità a cui siamo interessati, scegliamo di normalizzare in modo che tutti gli spettri abbiamo area unitaria."
    ]
   },
   {
@@ -279,9 +275,7 @@
    "source": [
     "E qui li plottiamo tutti.\n",
     "\n",
-    "**Capiamo che i tempi di esposizione per punti diversi del campione di materiale sono sensibilmente diversi, come lo è anche la forma del background.**\n",
-    "\n",
-    "C'e' quindi la necessita' di sottrarre il rumore e normalizzare gli spettri in modo da poterli confrontare."
+    "**Capiamo che i tempi di esposizione per punti diversi del campione di materiale sono sensibilmente diversi, come lo è anche la forma del background.** C'e' quindi la necessita' di sottrarre il rumore e normalizzare gli spettri in modo da poterli confrontare."
    ]
   },
   {
@@ -317,7 +311,7 @@
    "id": "73c289c5",
    "metadata": {},
    "source": [
-    "Andiamo a vedere come sono gli **spettri sperimentali con il background rimosso**, di seguito come prima i primi tre punti."
+    "Andiamo a vedere come sono gli **spettri sperimentali con il background rimosso** (già forniti), di seguito come prima i primi tre punti."
    ]
   },
   {
@@ -357,7 +351,9 @@
     "hide_input": true
    },
    "source": [
-    "E poi tutti."
+    "E poi tutti.\n",
+    "\n",
+    "Quì capiamo che alcuni spettri non rappresenano un segnale fisico dato che non rispettano alcun comportamento visto negli spettri puri: non evidenziano picchi, presentano un'offset significativo e hanno intensità importanti anche per numeri d'onda maggiori di $1230 cm^{-1}$. Questi spettri andrebbero probabilmente rimossi per tutta l'analisi che segue ma tuttavia questo **non è ancora stato implementato**."
    ]
   },
   {
@@ -393,8 +389,6 @@
    "id": "f49e27b2",
    "metadata": {},
    "source": [
-    "Andiamo anche a vedere quale è la **differenza tra uno spettro con rumore di background e uno senza**. \n",
-    "\n",
     "Non ci sembra che il background possa darci informazioni utili e dunque, da qui in poi, tratteremo solo gli spettri a background rimosso."
    ]
   },
@@ -408,9 +402,7 @@
     "\n",
     "Per eliminare/ridurre questo offset utilizziamo il fatto che l'intensita' di tutti gli spettri puri per wave number > 1230 $cm^{-1}$ va a zero.\n",
     "\n",
-    "Imponiamo dunque questo anche agli spettri incogniti.\n",
-    "\n",
-    "**Calcoliamo l'offset sulla coda e lo sottraiamo a tutto lo spettro**. \n",
+    "Imponiamo dunque questo anche agli spettri incogniti: scegliamo di **calcolare l'offset sulla coda e lo sottraiamo a tutto lo spettro**. \n",
     "\n",
     "Di seguito un **esempio**."
    ]
@@ -464,7 +456,7 @@
    "id": "2e5b7fc1",
    "metadata": {},
    "source": [
-    "Implementiamo poi il procedimento su tutti i sample"
+    "Implementiamo poi il procedimento su tutti i sample. Di seguito il risultato."
    ]
   },
   {
@@ -477,14 +469,6 @@
     "for temp in names[1::]:\n",
     "    offset=data_bkg[temp][element_soglia::].mean()\n",
     "    data_bkg[temp]=data_bkg[temp]-offset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "09ca7309",
-   "metadata": {},
-   "source": [
-    "Di seguito il risultato."
    ]
   },
   {
@@ -523,13 +507,7 @@
     "### Normalizzazione degli spettri di sample\n",
     "Anche quì gli spettri non sono normalizzati tra di loro, per confrontarli prima di tutto li normalizziamo.\n",
     "\n",
-    "**Effettiamo la normalizzazione calcolando l'integrale solo sulla parte sinistra del grafico.**\n",
-    "\n",
-    "La coda del grafico Non sara' utilizzata nell'analisi dato che negli spettri puri sopra circa $1230 cm^{-1}$ la coda va a zero. \n",
-    "\n",
-    "A causa della rimozione dell'offset ci troviamo davanti a delle intensita' negative.\n",
-    "\n",
-    "Per normalizzare correttamente nell'integrazione numerica utilizziamo il modulo dello spettro."
+    "Scegliamo di **effettuare la normalizzazione calcolando l'integrale solo sulla parte sinistra del grafico**. Questo perchè sceglaimo di non utilizzare la coda del grafico nell'analisi dato che negli spettri puri sopra circa $1230 cm^{-1}$ la coda va a zero. "
    ]
   },
   {
@@ -613,11 +591,9 @@
     "\n",
     "Tuttavia capiamo subito che il rumore che presentano gli spettri è a frequenze molto più alte della frequenza con cui sono campionati i punti degli spettri sperimentali.\n",
     "\n",
-    "Con questo metodo il rumore non viene attenuato, non possiamo mediare con troppi punti, altrimenti i picchi si abbassano. \n",
+    "Con questo metodo il rumore non viene attenuato dato che non possiamo mediare con troppi punti, altrimenti i picchi si abbassano. \n",
     "\n",
-    "L'unica applicazione che potrebbe avere questo metodo è che, come si vede dal grafico sottostante, mediando su due punti la curva non viene modificata sensibilmente. \n",
-    "\n",
-    "Questo porterebbe il vantaggio di lavorare con spettri aventi la metà dei punti, quindi un vantaggio dal punto di vista computazioanle."
+    "L'unica applicazione che potrebbe avere questo metodo è che, come si vede dal grafico sottostante, mediando su due punti la curva non viene modificata sensibilmente. Questo porterebbe il vantaggio di lavorare con spettri aventi la metà dei punti, quindi un vantaggio dal punto di vista computazioanle."
    ]
   },
   {
@@ -675,9 +651,7 @@
     "\n",
     "Siamo interessati a riconoscere le abbondanze principali dei materiali del nostro campione possiamo trascurarlo. Per ridurre questo rumore dagli spettri sperimentali procediamo come segue.\n",
     "\n",
-    "**Ipotizziamo che il rumore non dipenda dal numero d'onda**.\n",
-    "\n",
-    "Calcoliamo la varianza sulla coda dei grafici (che per confronto con gli spettri puri dovrebbe essere a zero) e fissiamo una soglia, in funzione della varianza, all'intensità su tutta la curva. \n",
+    "**Ipotizziamo che il rumore non dipenda dal numero d'onda**. Calcoliamo dunque la varianza sulla coda dei grafici (che per confronto con gli spettri puri dovrebbe essere a zero) e fissiamo una soglia, in funzione della varianza, all'intensità su tutta la curva. \n",
     "\n",
     "I punti con intensità inferiore alla soglia (fissata a $3\\sigma$) sono messi a zero."
    ]
@@ -778,12 +752,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cadcf24f",
+   "cell_type": "markdown",
+   "id": "06fb19f0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Eliminazione degli spettri \"non fisici\"\n",
+    "Non abbiamo ancora avuto il tempo di implementarlo...."
+   ]
   }
  ],
  "metadata": {
@@ -802,7 +777,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.8"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
