Ultimi ritocchi a CLUSTERING e FIT

--- a/notebooks/FIT.ipynb
+++ b/notebooks/FIT.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "code_folding": [
-     7
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -77,11 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Le frequenze di campionamento degli spettri puri sono diverse tra loro e diverse da quelle utilizzate per il campionamento degli spettri sperimentali.**\n",
-    "\n",
-    "Per poter eseguire un fit dobbiamo per prima cosa interpolare i dati degli spettri puri con quelli degli spettri sperimentali.\n",
-    "\n",
-    "Dopo l'interpolazione le frequenze degli spettri puri saranno le stesse delle frequenze degli spettri sperimentlai."
+    "**Le frequenze di campionamento degli spettri puri sono diverse tra loro e diverse da quelle utilizzate per il campionamento degli spettri sperimentali.** Per poter eseguire un fit dobbiamo per prima cosa interpolare i dati degli spettri puri con quelli degli spettri sperimentali. Dopo l'interpolazione le frequenze degli spettri puri saranno le stesse delle frequenze degli spettri sperimentlai."
    ]
   },
   {
@@ -126,18 +120,18 @@
    "source": [
     "Per fittare gli spettri puri ai dati ragioniamo in questo modo:\n",
     "\n",
-    "possiamo vedere lo spettro incognito del centroide $C$ come una combinazione lineare con coefficienti non negativi di tutti gli spettri puri $P_{i}$.\n",
+    "- possiamo vedere lo spettro incognito del centroide $C$ come una combinazione lineare con coefficienti non negativi di tutti gli spettri puri $P_{i}$.\n",
     "\n",
-    "Nel nostro modello gli spettri puri $P_{i} \\in \\mathbb{R}^n$ dove $n$ e' la dimesnionalita' del vettore delle intensita' dei vari spettri.\n",
+    "- Nel nostro modello gli spettri puri $P_{i} \\in \\mathbb{R}^n$ dove $n$ e' la dimesnionalita' del vettore delle intensita' dei vari spettri.\n",
     " \n",
-    "$C = \\sum \\alpha_{i}P_{i} + P_{0} $ dove $P_{0}$ e' un parametro costante."
+    "- $C = \\sum \\alpha_{i}P_{i} + P_{0} $ dove $P_{0}$ e' un parametro costante."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fortunatamente nell'ultimo aggiornamento di SikitLearn (rilasciato proprio nel periodo in cui abbiamo lavorato al progetto) e' stato introdotto il parametro \"positive\" in LinearRegression, che permette di considerare solo coefficienti non negativi :)"
+    "Fortunatamente nell'ultimo aggiornamento di SikitLearn (rilasciato proprio nel periodo in cui abbiamo lavorato al progetto) e' stato introdotto il parametro \"positive\" in LinearRegression, che permette di considerare solo coefficienti non negativi. Questo è stato fondamentale dato che in ogni caso sarebbe stato necessario implementarlo, altrimenti il FIT utilzzava combinazioni di coeficienti positivi e negativi per utilizzando tutti gli spettri in modo da fittare il rumore."
    ]
   },
   {
@@ -182,7 +176,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -218,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tenendo conto del numero di spettri presenti in ogni cluster, determiniamo il materiale piu' abbondande nel campione."
+    "Tenendo conto del numero di spettri presenti in ogni cluster, determiniamo il materiale piu' abbondande nel campione utilizzando i coefficienti dei fit. **Otteniamo così il risultato finale: le abbondanze nel campione**."
    ]
   },
   {
@@ -418,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.8"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
