script_fit il calcolo corretto delle abbondanze

--- a/notebooks/FIT.ipynb
+++ b/notebooks/FIT.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>names</th>\n      <th>abbundances</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Chrysotile</td>\n      <td>0.401974</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Forsterite</td>\n      <td>0.137696</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Dwornikite</td>\n      <td>0.136892</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Jarosite</td>\n      <td>0.033396</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Magnesiochromite</td>\n      <td>0.027345</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Spinel</td>\n      <td>0.024852</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Arsenopyrite</td>\n      <td>0.019172</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>Fayalite</td>\n      <td>0.017221</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>Magnesite</td>\n      <td>0.016771</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>Goethite</td>\n      <td>0.015422</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>Pyrophyllite</td>\n      <td>0.014889</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>Chromite</td>\n      <td>0.014835</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>Gaspeite</td>\n      <td>0.012055</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>Diopside</td>\n      <td>0.010266</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>Zoisite</td>\n      <td>0.010208</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 20
     }
    ],
    "source": [
@@ -260,7 +260,7 @@
     "        coeff[int(temp)]=coeff[int(temp)]/sum(coeff[int(temp)])\n",
     "    else:\n",
     "        print(f'Identificato lo spettro piatto, non utilizzato il cluster {int(temp)}')\n",
-    "    \n",
+    "        coeff[int(temp)]=np.zeros(len(coeff[int(temp)]))\n",
     "\n",
     "#numero di spettri per cluster in ordine\n",
     "weights=[np.count_nonzero(labels==i) for i in range(len(data.columns)-1)]\n",
@@ -282,9 +282,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[array([0.        , 0.00898991, 0.        , 0.00184671, 0.0085143 ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.147209  , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.07841711,\n",
+       "        0.        , 0.01762783, 0.06202325, 0.        , 0.5661129 ,\n",
+       "        0.        , 0.00141434, 0.        , 0.        , 0.        ,\n",
+       "        0.00114131, 0.0029368 , 0.0097951 , 0.        , 0.00582745,\n",
+       "        0.00250787, 0.01344803, 0.00535358, 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.00170653, 0.        , 0.01170869,\n",
+       "        0.01814481, 0.        , 0.        , 0.        , 0.0077422 ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.02753228]),\n",
+       " array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]),\n",
+       " array([1.99451449e-04, 6.06372498e-03, 0.00000000e+00, 1.05596992e-02,\n",
+       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
+       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
+       "        5.16477561e-01, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
+       "        0.00000000e+00, 1.38889828e-02, 0.00000000e+00, 1.44803653e-01,\n",
+       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
+       "        8.63148446e-02, 0.00000000e+00, 2.62990091e-02, 0.00000000e+00,\n",
+       "        0.00000000e+00, 0.00000000e+00, 1.29448454e-02, 0.00000000e+00,\n",
+       "        3.62067961e-02, 0.00000000e+00, 3.35913947e-03, 0.00000000e+00,\n",
+       "        5.19035861e-02, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
+       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
+       "        1.76214240e-02, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
+       "        0.00000000e+00, 0.00000000e+00, 7.70725683e-03, 2.25968095e-02,\n",
+       "        9.40290758e-03, 0.00000000e+00, 3.23218874e-02, 1.32842127e-03,\n",
+       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
+       "        0.00000000e+00]),\n",
+       " array([0.        , 0.00699315, 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.41467168, 0.02269712, 0.        ,\n",
+       "        0.        , 0.        , 0.00619199, 0.00058511, 0.32236534,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.04233238,\n",
+       "        0.00391495, 0.03063855, 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.01797575, 0.        , 0.00838702,\n",
+       "        0.        , 0.02772506, 0.01214617, 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.02634323,\n",
+       "        0.00146734, 0.        , 0.        , 0.        , 0.03264963,\n",
+       "        0.00502745, 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.01788808]),\n",
+       " array([0.        , 0.00339736, 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.0016994 , 0.17728683, 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.13110069, 0.05089969, 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.08992644, 0.05371893,\n",
+       "        0.        , 0.        , 0.        , 0.0865744 , 0.0317058 ,\n",
+       "        0.11152355, 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.10141462, 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.13904324, 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.01083709, 0.        , 0.        , 0.        , 0.01087197,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        ]),\n",
+       " array([0.        , 0.        , 0.        , 0.02031395, 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.16862954, 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.00430701, 0.45498568,\n",
+       "        0.        , 0.02765134, 0.        , 0.        , 0.02023501,\n",
+       "        0.        , 0.0857291 , 0.00301731, 0.        , 0.        ,\n",
+       "        0.04418106, 0.02354383, 0.        , 0.        , 0.01150162,\n",
+       "        0.        , 0.02768516, 0.        , 0.        , 0.01146914,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.03398662,\n",
+       "        0.00568005, 0.        , 0.        , 0.00651069, 0.0059755 ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.0445974 ]),\n",
+       " array([0.        , 0.00702439, 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.07009297, 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.25823737, 0.03925021, 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.01121981, 0.12026126,\n",
+       "        0.        , 0.        , 0.01498135, 0.02574365, 0.20063281,\n",
+       "        0.00806528, 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.06963372, 0.        , 0.00130428,\n",
+       "        0.        , 0.00333272, 0.13180672, 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.01910138, 0.        , 0.        , 0.        , 0.01931206,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        ]),\n",
+       " array([0.02112408, 0.        , 0.        , 0.02281479, 0.        ,\n",
+       "        0.02694869, 0.        , 0.12894161, 0.        , 0.        ,\n",
+       "        0.0032143 , 0.        , 0.0119679 , 0.25104952, 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.00560629, 0.        ,\n",
+       "        0.        , 0.        , 0.01901082, 0.        , 0.0435705 ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.03484785, 0.        , 0.00252864,\n",
+       "        0.13555477, 0.01192641, 0.        , 0.0419268 , 0.        ,\n",
+       "        0.        , 0.02523015, 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.04877557, 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.01321395, 0.02636208, 0.00893413, 0.        ,\n",
+       "        0.        , 0.        , 0.09329453, 0.        , 0.        ,\n",
+       "        0.02315661]),\n",
+       " array([0.        , 0.        , 0.        , 0.0453318 , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.1168789 , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.00167453, 0.19734876,\n",
+       "        0.        , 0.04113384, 0.04203131, 0.        , 0.23857735,\n",
+       "        0.        , 0.01951839, 0.        , 0.        , 0.        ,\n",
+       "        0.03641285, 0.01327948, 0.        , 0.        , 0.00598197,\n",
+       "        0.        , 0.08996565, 0.00639432, 0.        , 0.01006294,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.00953489, 0.        , 0.03820357,\n",
+       "        0.00051944, 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.0580891 , 0.        , 0.        ,\n",
+       "        0.02906092]),\n",
+       " array([0.00000000e+00, 1.74116925e-02, 1.51482713e-02, 0.00000000e+00,\n",
+       "        7.00048112e-03, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
+       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
+       "        3.34621394e-02, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
+       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 1.50422373e-02,\n",
+       "        0.00000000e+00, 2.44847313e-02, 1.38336517e-01, 0.00000000e+00,\n",
+       "        6.37919119e-01, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
+       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 4.97558411e-03,\n",
+       "        8.06101267e-03, 0.00000000e+00, 3.37545150e-03, 0.00000000e+00,\n",
+       "        0.00000000e+00, 9.80374626e-03, 0.00000000e+00, 0.00000000e+00,\n",
+       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
+       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 2.08609752e-02,\n",
+       "        0.00000000e+00, 0.00000000e+00, 2.00981417e-02, 0.00000000e+00,\n",
+       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 1.26473805e-04,\n",
+       "        0.00000000e+00, 9.01003687e-03, 0.00000000e+00, 0.00000000e+00,\n",
+       "        3.48833893e-02]),\n",
+       " array([0.00358777, 0.00714094, 0.        , 0.00652578, 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.65104685, 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.02250022, 0.        , 0.0896544 ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.01429844,\n",
+       "        0.01032547, 0.00574037, 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.03899656, 0.        , 0.00318865,\n",
+       "        0.        , 0.02370655, 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.01914913, 0.01564228,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.00073259, 0.03182253, 0.01503642, 0.        , 0.03876402,\n",
+       "        0.00214101, 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        ]),\n",
+       " array([0.        , 0.01007206, 0.00143134, 0.        , 0.00749682,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.33425971, 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.0849634 ,\n",
+       "        0.        , 0.01009781, 0.0527669 , 0.        , 0.39846575,\n",
+       "        0.        , 0.00480908, 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.00737463, 0.01247381, 0.        , 0.00309479,\n",
+       "        0.01077686, 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.01959966, 0.00611599, 0.        , 0.        , 0.02228941,\n",
+       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.01391201])]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
    "source": [
     "abb_table.to_csv(\"../data/processed/abb_table.csv\")"
    ]
