--- a/reports/report.ipynb
+++ b/reports/report.ipynb
@@ -99,7 +99,7 @@
     "\n",
     "Dato che l'area sotto lo spettro risulta proporzionale al tempo di esposizione della misura (fonte: pdf di introduzione), questa non è una quantità a cui siamo interessati, scegliamo di normalizzare in modo che tutti gli spettri abbiamo area unitaria. Il seguente è il risultato.\n",
     "\n",
-    "![pure normalized spectrums.](./figures/pure_normalized_spectrums.png)\n",
+    "![pure normalized spectrums.](./figures/pure_normalized_specrtums.png)\n",
     "\n",
     "Notiamo che nessuno degli spettri puri presenta un rumore rilevante, assumiamo dunque che questi spettri rappresentino gli spettri Raman corretti per i materiali nella lista.\n",
     "\n",
@@ -127,21 +127,21 @@
     "\n",
     "Da questi grafici prendiamo le seguenti scelte nel trattare i dati.\n",
     "\n",
-    "**Rimozione dell'offset**\n",
+    "- **Rimozione dell'offset**\n",
     "\n",
-    "Come abbiamo visto dagli spettri puri, diversamente dagli spettri incogniti nessuno spettro presentava un offset rilevante. \n",
+    "Come abbiamo visto dagli spettri puri, diversamente dagli spettri incogniti nessuno spettro presentava un offset rilevante. Per eliminare/ridurre questo offset utilizziamo il fatto che l'intensita' di tutti gli spettri puri per wave number > 1230 $cm^{-1}$ va a zero. Imponiamo dunque questo constrain agli spettri incogiti per rimuovere l'offset (calcoliamo l'offset sulla coda e lo sottraiamo a tutto lo spettro). \n",
     "\n",
-    "Per eliminare/ridurre questo offset utilizziamo il fatto che l'intensita' di tutti gli spettri puri per wave number > 1230 $cm^{-1}$ va a zero.\n",
-    "\n",
-    "Imponiamo dunque questo constrain agli spettri incogiti per rimuovere l'offset (calcoliamo l'offset sulla coda e lo sottraiamo a tutto lo spettro). \n",
-    "\n",
-    "**Scegliamo di eliminare la parte destra del grafico**\n",
+    "- **Scegliamo di eliminare la parte destra del grafico**\n",
     "\n",
     "Questo perchè, come si vede dagli spettri puri, non abbiamo picchi oltre alla frequenza di soglia fissata a $1230 cm^{-1}$.\n",
     "\n",
-    "**Normalizzazione degli spettri del sample**\n",
+    "- **Normalizzazione degli spettri del sample**\n",
     "\n",
-    "Normalizziamo in fine i dati per poterli confrontare."
+    "Normalizziamo in fine i dati per poterli confrontare.\n",
+    "\n",
+    "- **Eliminazione degli spettri \"non fisici\"**\n",
+    "\n",
+    "Se questa opzione è stata selezionata gli spettri non fisici, selezionati utilizzando un bound sull'intensità massima della coda, vengono messi a zero, clusterizzati a parte e non utilizzati nel calcolo delle abbondanze."
    ]
   },
   {
@@ -424,9 +424,7 @@
     "\n",
     "Di seguito il risultato del clustering con KMeans (#cluster=5).\n",
     "\n",
-    "![correlation_cluster.](./figures/correlation_cluster.png)\n",
-    "\n",
-    "Andiamo ora a vedere visivamente se il risultato del clustering correla con la posizione. Effettuiamo un plot su una grilgia 11x11 che mostra la clusterizzazione con colori diversi. Visivamente non sembra di vedere abbondanze particolari (attenzione a non confondere abbondanze con correlazioni).\n",
+    "![correlation_cluster.](./figures/correlation_clusters.png)\n",
     "\n",
     "### Definizione di correlazione spaziale\n",
     "Per descrivere in modo quantitativo la correlazione utilizziamo il coeficiente di Moran (vedi definizione alla [pagina Wikipedia](https://en.wikipedia.org/wiki/Moran%27s_I)). La metrica che utilizziamo è un *nearest neighbour*. Di seguito degli esempi che spiegano in modo pratico questo indice.\n",
@@ -452,7 +450,7 @@
     "### Coeficiente di Morane per i nostri cluster\n",
     "Andiamo a calcolare i coefficienti di Morange per i nostri cluster. Chiaramente ne dobbiamo calcolare uno per cluster. I coefficienti di Moran sono scritti nelle labels.\n",
     "\n",
-    "Negli spettri dati come esempio questi coefficienti sono tendenti a zero, non è evidenziata alcuna correlazione particolare.\n",
+    "Negli spettri dati come esempio questi coefficienti sono vicini allo zero, non è evidenziata alcuna correlazione particolare. Questo si capisce anche da un impatto visivo con la figura.\n",
     "\n",
     "![correlation_grid.](./figures/correlation_grid.png)"
    ]
@@ -475,7 +473,7 @@
     "\n",
     "![FIT_cluster.](./figures/FIT_cluster.png)\n",
     "\n",
-    "Di questo clustering teniamo i centroidi, con i quali fitteremo gli spettri puri. Di seguito importiamo e plottiamo i centroidi generati dalla clusterizzazione automatizzata con make. "
+    "Di questo clustering teniamo i centroidi, con i quali fitteremo gli spettri puri (questo ci è utile per rimuovere il rumore di fondo). Di seguito importiamo e plottiamo i centroidi generati dalla clusterizzazione automatizzata con make. "
    ]
   },
   {
