--- a/notebooks/FIT.ipynb
+++ b/notebooks/FIT.ipynb
@@ -427,38 +427,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([0.00104761, 0.01050558, 0.00115834, 0.01921427, 0.        ,\n",
-       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "       0.        , 0.        , 0.49025535, 0.00201975, 0.        ,\n",
-       "       0.        , 0.        , 0.01596346, 0.00304961, 0.15493149,\n",
-       "       0.        , 0.        , 0.01197295, 0.        , 0.14806064,\n",
-       "       0.01659161, 0.01232594, 0.        , 0.        , 0.        ,\n",
-       "       0.00105727, 0.        , 0.04031762, 0.        , 0.00436057,\n",
-       "       0.        , 0.06264572, 0.01211602, 0.        , 0.        ,\n",
-       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "       0.00745849, 0.01773327, 0.00420027, 0.        , 0.03062166,\n",
-       "       0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "       0.0071128 ])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 55
-    }
-   ],
-   "source": [
-    "ols.coef_"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
    "outputs": [
@@ -489,7 +457,7 @@
    ],
    "source": [
     "\n",
-    "#e infine ho la media pesata dei coeficienti\n",
+    "#normalizzo a uno i coeficienti\n",
     "abb=ols.coef_/(sum(ols.coef_).sum())\n",
     "\n",
     "#Creo un Pandas dataframe con nomi e abbondanze\n",
@@ -498,6 +466,7 @@
     "#riordino in base alla concenrazione\n",
     "abb_table.sort_values('abbundances',ascending=False,inplace=True, ignore_index=True)\n",
     "\n",
+    "#e plotto quelle superiori all' 1%\n",
     "abb_table[abb_table['abbundances']>0.01]"
    ]
   },
